# datronis-relay

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.example.yaml  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: api_reference.md  architecture.md  changelog.md  engineering.md  index.md  installation.md  performance.md  quickstart.md  release_checklist.md  roadmap.md  security.md  slack_setup.md  testing.md  use-cases.md  versioning.md  web-dashboard.md
docs/assets/: README.md
examples/systemd/: datronis-relay.service
scripts/: benchmark.py
src/datronis_relay/: __init__.py  __main__.py  main.py
src/datronis_relay/adapters/slack/: bot.py  reply_channel.py
src/datronis_relay/adapters/telegram/: bot.py  reply_channel.py
src/datronis_relay/api/: __init__.py  routes.py  server.py
src/datronis_relay/cli/: banner.py  doctor.py  prompts.py  setup.py
src/datronis_relay/core/: auth.py  chunking.py  command_router.py  cost_tracker.py  interval_parser.py  message_pipeline.py  ports.py  rate_limiter.py  reply_channel.py  scheduler.py  session_manager.py
src/datronis_relay/domain/: attachments.py  audit.py  cost.py  errors.py  ids.py  messages.py  pricing.py  scheduled_task.py  stream_events.py  user.py
src/datronis_relay/infrastructure/: claude_client.py  config.py  logging.py  metrics.py  session_store.py  sqlite_storage.py
src/datronis_relay/infrastructure/formatting/: __init__.py  chunker.py  code_split.py  escaping.py  markdown_ast.py  metrics.py  passthrough.py  strip_markdown.py  table.py
src/datronis_relay/infrastructure/formatting/slack/: __init__.py  formatter.py  renderer.py
src/datronis_relay/infrastructure/formatting/telegram/: __init__.py  formatter.py  renderer.py
src/datronis_relay/infrastructure/migrations/: 0001_init.sql  0002_scheduled_tasks.sql
tests/: conftest.py
tests/fixtures/markdown/: 01_plain.md  02_headings.md  02_headings.slack.txt  02_headings.telegram.html  03_bold_italic.md  03_bold_italic.slack.txt  03_bold_italic.telegram.html  04_inline_code.md  04_inline_code.slack.txt  04_inline_code.telegram.html  05_fenced_code.md  05_fenced_code.slack.txt  05_fenced_code.telegram.html  06_link.md  06_link.slack.txt  06_link.telegram.html  07_unordered_list.md  07_unordered_list.telegram.html  08_ordered_list.md  08_ordered_list.slack.txt  09_blockquote.md  09_blockquote.slack.txt  09_blockquote.telegram.html  10_table_small.md  10_table_small.slack.txt  10_table_small.telegram.html  11_mixed_rtl.md  11_mixed_rtl.slack.txt  11_mixed_rtl.telegram.html  12_huge_code.md  12_huge_code.slack.txt  12_huge_code.telegram.html  13_whitespace.md  14_long_paragraph.telegram.html  README.md
tests/integration/: test_formatting_slack_integration.py  test_formatting_telegram_integration.py  test_load.py  test_pipeline.py  test_sqlite_storage.py
tests/unit/: test_auth.py  test_chunking.py  test_claude_client.py  test_cli_setup.py  test_command_router.py  test_config.py  test_cost_tracker.py  test_entrypoints.py  test_formatting_chunker.py  test_formatting_chunker_properties.py  test_formatting_code_split.py  test_formatting_escaping.py  test_formatting_fixtures.py  test_formatting_markdown_ast.py  test_formatting_metrics.py  test_formatting_passthrough.py  test_formatting_slack_mrkdwn.py  test_formatting_strip_markdown.py  test_formatting_table.py  test_formatting_telegram_html.py  test_interval_parser.py  test_logging.py  test_main_builders.py  test_message_pipeline.py  test_metrics.py  test_rate_limiter.py  test_reply_channels.py  test_schedule_commands.py  test_scheduler.py  test_session_manager.py  test_slack_adapter.py  test_telegram_helpers.py
ui/: eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vitest.config.ts
ui/messages/: de.json  en.json  es.json  fr.json  ja.json  zh.json
ui/src/: middleware.ts
ui/src/app/: globals.css
ui/src/app/[locale]/: layout.tsx
ui/src/app/[locale]/(dashboard)/: layout.tsx  page.tsx
ui/src/app/[locale]/(dashboard)/adapters/: page.tsx
ui/src/app/[locale]/(dashboard)/audit/: page.tsx
ui/src/app/[locale]/(dashboard)/cost/: page.tsx
ui/src/app/[locale]/(dashboard)/monitoring/: page.tsx
ui/src/app/[locale]/(dashboard)/settings/: page.tsx
ui/src/app/[locale]/(dashboard)/tasks/: page.tsx
ui/src/app/[locale]/(dashboard)/users/: page.tsx
ui/src/app/[locale]/(dashboard)/users/[id]/: page.tsx
ui/src/app/[locale]/login/: page.tsx
ui/src/components/adapters/: adapter-card.tsx  token-rotation-dialog.tsx
ui/src/components/audit/: audit-filters.tsx  audit-table.tsx
ui/src/components/cost/: cost-chart.tsx  cost-per-user-table.tsx  cost-summary-cards.tsx
ui/src/components/layout/: app-shell.tsx  header.tsx  locale-switcher.tsx  mobile-nav.tsx  sidebar.tsx  theme-toggle.tsx
ui/src/components/monitoring/: history-chart.tsx  network-table.tsx  resource-breakdown.tsx  system-info-cards.tsx  usage-gauge.tsx
ui/src/components/settings/: config-form.tsx  config-section.tsx  restart-dialog.tsx
ui/src/components/tasks/: task-delete-dialog.tsx  task-form.tsx  task-table.tsx
ui/src/components/ui/: date-range-picker.tsx  empty-state.tsx  error-state.tsx  interval-select.tsx  skeleton.tsx  sort-header.tsx  toast.tsx
ui/src/components/users/: user-delete-dialog.tsx  user-form.tsx  user-table.tsx
ui/src/hooks/: use-api.ts
ui/src/i18n/: routing.ts
ui/src/lib/: api.ts  csv.ts  interval.ts  schemas.ts  utils.ts
ui/tests/unit/: adapter-schemas.test.ts  audit-schemas.test.ts  config-schema.test.ts  cost-schemas.test.ts  csv.test.ts  interval.test.ts  is-rtl.test.ts  locale-parity.test.ts  task-form-schema.test.ts  user-form-schema.test.ts
